# geometry

./: .gitignore  CMakeLists.txt  Geometry.sln  Geometry.vcxproj  Geometry.vcxproj.filters  Shapes.cpp  Shapes.h  areaAllSubsets.cpp  areaAllSubsets.h  areaGeneric.cpp  areaVoronoi.cpp  intersectionOutline.cpp  intersectionOutline.h  pairwiseIntersections.cpp  powerSetIterator.hpp
ConvexBoundaryTester/: convexBoundaryTester.cpp  convexBoundaryTester.pro  convexBoundaryTester.vcxproj  convexBoundaryTester.vcxproj.filters  convexBoundaryViewer.cpp  convexBoundaryViewer.h
GeometryCommon/: CMakeLists.txt  Shapes.cpp  Shapes.h  areaGeneric.cpp  areaGeneric.h  areaVoronoi.h  intersectionOutline.cpp  pairwiseIntersections.h  powerSetIterator.hpp  primitiveIntersections.cpp  primitiveIntersections.hpp
IntersectionTest/: IntersectionTester.pro  IntersectionTester.vcxproj  IntersectionTester.vcxproj.filters  intersectionTester.cpp  intersectionViewer.cpp  intersectionViewer.h
UnionAreaTest/: UnionAreaTest.vcxproj  UnionAreaTest.vcxproj.filters  unionAreaTest.cpp
intersectionAreaTester/: intersectionAreaTester.cpp  intersectionAreaTester.pro  intersectionAreaTester.vcxproj  intersectionAreaTester.vcxproj.filters  intersectionAreaViewer.cpp  intersectionAreaViewer.h
intersectionAreaTester2/: intersectionAreaTester2.cpp  intersectionAreaTester2.pro  intersectionAreaTester2.vcxproj  intersectionAreaTester2.vcxproj.filters  intersectionAreaViewer2.cpp  intersectionAreaViewer2.h
voronoiTest/: voronoiTester.cpp  voronoiTester.pro  voronoiTester.vcxproj  voronoiViewer.cpp  (+2 more)
