cmake_minimum_required(VERSION 3.1)
set(HeaderFiles areaAllSubsets.h areaGeneric.h areaVoronoi.h intersectionOutline.h pairwiseIntersections.h Shapes.h)
set(CppFiles areaAllSubsets.cpp areaGeneric.cpp areaVoronoi.cpp intersectionOutline.cpp pairwiseIntersections.cpp powerSetIterator.hpp primitiveIntersections.cpp primitiveIntersections.hpp Shapes.cpp)
add_library(geometryCommon STATIC ${HeaderFiles} ${CppFiles})
target_include_directories(geometryCommon PUBLIC ${cml_DIR} ${CGAL_INCLUDE_DIRS} ${Boost_INCLUDE_DIRS} ${PROJECT_SOURCE_DIR}/GeometryCommon/)
target_link_libraries(geometryCommon PUBLIC ${CGAL_LIBRARY} ${Boost_LIBRARIES})
if(WIN32)
	set_target_properties(geometryCommon PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/x64/ PDB_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/x64/)
else()
	target_compile_features(geometryCommon PUBLIC cxx_rvalue_references)
endif()
